--- a/assets/minecraft/lang/en_us.json
+++ b/assets/minecraft/lang/en_us.json
@@ -662,13 +662,13 @@
   "book.signButton": "Sign",
   "book.editTitle": "Enter Book Title:",
   "book.finalizeButton": "Sign and Close",
-  "book.finalizeWarning": "Note! When you sign the book, it will no longer be editable.",
+  "book.finalizeWarning": "Note! When you sign the book, it will no longer be editable. Mojang Please Fix",
   "book.generation.0": "Original",
   "book.generation.1": "Copy of original",
   "book.generation.2": "Copy of a copy",
   "book.generation.3": "Tattered",
   "book.invalid.tag": "* Invalid book tag *",
-  "merchant.deprecated": "Trade something else to unlock!",
+  "merchant.deprecated": "Gimme something else!",
   "block.minecraft.air": "Air",
   "block.minecraft.barrier": "Barrier",
   "block.minecraft.stone": "Stone",
@@ -1431,9 +1431,9 @@
   "item.minecraft.ender_pearl": "Ender Pearl",
   "item.minecraft.blaze_rod": "Blaze Rod",
   "item.minecraft.ghast_tear": "Ghast Tear",
-  "item.minecraft.nether_wart": "Nether Wart",
-  "item.minecraft.potion": "Potion",
-  "item.minecraft.splash_potion": "Splash Potion",
+  "item.minecraft.nether_wart": "Red Wart",
+  "item.minecraft.potion": "Flask",
+  "item.minecraft.splash_potion": "Jar",
   "item.minecraft.lingering_potion": "Lingering Potion",
   "item.minecraft.end_crystal": "End Crystal",
   "item.minecraft.gold_nugget": "Gold Nugget",
@@ -1874,7 +1874,7 @@
   "effect.none": "No Effects",
   "effect.minecraft.speed": "Quick-Step",
   "effect.minecraft.slowness": "Mudfoot",
-  "effect.minecraft.haste": "Haste",
+  "effect.minecraft.haste": "Swiftarm",
   "effect.minecraft.mining_fatigue": "Mining Fatigue",
   "effect.minecraft.strength": "Vigor",
   "effect.minecraft.instant_health": "Health",
@@ -1883,35 +1883,35 @@
   "effect.minecraft.nausea": "Nausea",
   "effect.minecraft.regeneration": "Restoration",
   "effect.minecraft.resistance": "Stone-Skin",
-  "effect.minecraft.fire_resistance": "Fire Resistance",
-  "effect.minecraft.water_breathing": "Water Breathing",
-  "effect.minecraft.invisibility": "Invisibility",
-  "effect.minecraft.blindness": "Blindness",
+  "effect.minecraft.fire_resistance": "Anti-Fire",
+  "effect.minecraft.water_breathing": "Gills",
+  "effect.minecraft.invisibility": "Masking",
+  "effect.minecraft.blindness": "Blindman",
   "effect.minecraft.night_vision": "Dark-Vision",
-  "effect.minecraft.hunger": "Hunger",
+  "effect.minecraft.hunger": "Starvation",
   "effect.minecraft.weakness": "Fraility",
   "effect.minecraft.poison": "Acid",
-  "effect.minecraft.wither": "Wither",
+  "effect.minecraft.wither": "Decay",
   "effect.minecraft.health_boost": "Health Boost",
   "effect.minecraft.absorption": "Absorption",
-  "effect.minecraft.saturation": "Saturation",
+  "effect.minecraft.saturation": "Feasting",
   "effect.minecraft.glowing": "Glowing",
   "effect.minecraft.luck": "Luck",
   "effect.minecraft.unluck": "Bad Luck",
   "effect.minecraft.levitation": "Levitation",
   "effect.minecraft.slow_falling": "Feather-Feet",
-  "effect.minecraft.conduit_power": "Conduit Power",
+  "effect.minecraft.conduit_power": "Akwal's Blessing",
   "effect.minecraft.dolphins_grace": "Dolphin's Grace",
   "item.minecraft.tipped_arrow.effect.empty": "Uncraftable Tipped Arrow",
   "item.minecraft.tipped_arrow.effect.water": "Arrow of Splashing",
   "item.minecraft.tipped_arrow.effect.mundane": "Tipped Arrow",
   "item.minecraft.tipped_arrow.effect.thick": "Tipped Arrow",
   "item.minecraft.tipped_arrow.effect.awkward": "Tipped Arrow",
-  "item.minecraft.tipped_arrow.effect.night_vision": "Arrow of Night Vision",
-  "item.minecraft.tipped_arrow.effect.invisibility": "Arrow of Invisibility",
-  "item.minecraft.tipped_arrow.effect.leaping": "Arrow of Leaping",
-  "item.minecraft.tipped_arrow.effect.fire_resistance": "Arrow of Fire Resistance",
-  "item.minecraft.tipped_arrow.effect.swiftness": "Arrow of Swiftness",
+  "item.minecraft.tipped_arrow.effect.night_vision": "Arrow of Dark-Vision",
+  "item.minecraft.tipped_arrow.effect.invisibility": "Arrow of Masking",
+  "item.minecraft.tipped_arrow.effect.leaping": "Arrow of High-Hop",
+  "item.minecraft.tipped_arrow.effect.fire_resistance": "Arrow of Anti-Fire",
+  "item.minecraft.tipped_arrow.effect.swiftness": "Arrow of Quick-Step",
   "item.minecraft.tipped_arrow.effect.slowness": "Arrow of Slowness",
   "item.minecraft.tipped_arrow.effect.water_breathing": "Arrow of Water Breathing",
   "item.minecraft.tipped_arrow.effect.healing": "Arrow of Healing",
@@ -1945,7 +1945,7 @@
   "item.minecraft.potion.effect.weakness": "Fraility Flask",
   "item.minecraft.potion.effect.levitation": "Potion of Levitation",
   "item.minecraft.potion.effect.luck": "Potion of Luck",
-  "item.minecraft.potion.effect.turtle_master": "Potion of the Turtle Master",
+  "item.minecraft.potion.effect.turtle_master": "Essence of Turtle Flask",
   "item.minecraft.potion.effect.slow_falling": "Feather-Feet Flask",
   "item.minecraft.splash_potion.effect.empty": "Splash Uncraftable Potion",
   "item.minecraft.splash_potion.effect.water": "Splash Water Bottle",
@@ -1967,7 +1967,7 @@
   "item.minecraft.splash_potion.effect.weakness": "Fraility Jar",
   "item.minecraft.splash_potion.effect.levitation": "Splash Potion of Levitation",
   "item.minecraft.splash_potion.effect.luck": "Splash Potion of Luck",
-  "item.minecraft.splash_potion.effect.turtle_master": "Splash Potion of the Turtle Master",
+  "item.minecraft.splash_potion.effect.turtle_master": "Essence of Turtle Jar",
   "item.minecraft.splash_potion.effect.slow_falling": "Feather-Feet Jar",
   "item.minecraft.lingering_potion.effect.empty": "Lingering Uncraftable Potion",
   "item.minecraft.lingering_potion.effect.water": "Lingering Water Bottle",
@@ -3036,7 +3036,7 @@
   "subtitles.entity.illusioner.death": "Illusioner dies",
   "subtitles.entity.illusioner.hurt": "Illusioner hurts",
   "subtitles.entity.illusioner.mirror_move": "Illusioner displaces",
-  "subtitles.entity.illusioner.prepare_blindness": "Illusioner prepares blindness",
+  "subtitles.entity.illusioner.prepare_blindness": "Illusioner prepares blindman",
   "subtitles.entity.illusioner.prepare_mirror": "Illusioner prepares mirror image",
   "subtitles.entity.iron_golem.attack": "Iron Golem attacks",
   "subtitles.entity.iron_golem.death": "Iron Golem dies",
@@ -3392,8 +3392,8 @@
   "advancements.story.mine_stone.description": "Mine stone with your new pickaxe",
   "advancements.story.obtain_armor.title": "Suit Up",
   "advancements.story.obtain_armor.description": "Protect yourself with a piece of iron armor",
-  "advancements.story.root.title": "Minecraft",
-  "advancements.story.root.description": "The heart and story of the game",
+  "advancements.story.root.title": "Welcome to Crimson Ingot!",
+  "advancements.story.root.description": "Where Roleplay and Minecraft synergize.",
   "advancements.story.shiny_gear.title": "Cover Me With Diamonds",
   "advancements.story.shiny_gear.description": "Diamond armor saves lives",
   "advancements.story.smelt_iron.title": "Acquire Hardware",
